--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Mishmash</h1>
-      <h2 class="project-tagline"></h2>
+      <h1 class="project-name">Welcome to the Mishmash homepgae</h1>
+      <h2 class="project-tagline">Feel free to bookmark this to keep an eye on my project updates</h2>
       <a href="https://github.com/meechiekitten/mishmash" class="btn">View on GitHub</a>
       <a href="https://github.com/meechiekitten/mishmash/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/meechiekitten/mishmash/tarball/master" class="btn">Download .tar.gz</a>
